--- a/english.html
+++ b/english.html
@@ -347,6 +347,8 @@ Error message and password prompt
 
 <li>Christmas dinner Recipes</li>
 
+<li>Christopher Moltisanti</li>
+
 <li>Cleaning properly</li>
 
 <li>Coen sister</li>
@@ -576,6 +578,8 @@ Error message and password prompt
 <li>Max 20</li>
 
 <li>Me writing</li>
+
+<li>Meadow</li>
 
 <li>Meals</li>
 
@@ -826,6 +830,8 @@ Error message and password prompt
 <li>To draw</li>
 
 <li>Tomer</li>
+
+<li>Tony Soprano</li>
 
 <li>Tony Vespa</li>
 
@@ -8752,7 +8758,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8959,8 +8965,7 @@ coming soon as possible
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
 <div created="20200226093553507" modified="20200226093727098" tags="[[Here in the Ghetto]] Music" title="A December`s night">
-<pre>
-[img[pictures/layla-kan.jpg]]
+<pre>[img[pictures/layla-kan.jpg]]
 
 
 
@@ -9173,8 +9178,7 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
 </div>
 <div created="20200226100452363" modified="20200226100607236" tags="HH Music" title="Aunt Jemima">
-<pre>
-[img[pictures/aunt-jemima.jpg]]
+<pre>[img[pictures/aunt-jemima.jpg]]
 
 
 
@@ -9191,8 +9195,7 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
 </pre>
 </div>
 <div created="20200226071336479" modified="20200226072517041" tags="[[Here in the Ghetto]]" title="Autumn">
-<pre>
-[img[pictures/stav.jpg]]
+<pre>[img[pictures/stav.jpg]]
 
 
  &lt;&lt;heblink [[סתיו]]&gt;&gt;</pre>
@@ -9286,8 +9289,7 @@ Beautiful Ahal is the beautiful [[Ahal Eden|https://www.instagram.com/ahaleden/]
 </pre>
 </div>
 <div created="20200226104036918" modified="20200226104133430" tags="TV [[TV Series]]" title="Better Call Saul">
-<pre>
-[img[pictures/better-call-saul.jpg]]
+<pre>[img[pictures/better-call-saul.jpg]]
 
 
 
@@ -9424,8 +9426,7 @@ add quarter cup of olive oil and three sliced garlic cloves
 </pre>
 </div>
 <div created="20200225184705256" modified="20200225184807868" tags="[[Coen sister]]" title="Chan">
-<pre>
-[img[pictures/chan.jpg]]
+<pre>[img[pictures/chan.jpg]]
 
 
  &lt;&lt;heblink [[צ'ן]]&gt;&gt;
@@ -9566,6 +9567,15 @@ coming soon as possible
 
 </pre>
 </div>
+<div created="20200226111628712" modified="20200226111733644" tags="[[The Sopranos]] TV [[TV Series]]" title="Christopher Moltisanti">
+<pre>
+[img[pictures/christopher-moltisanti.jpg]]
+
+
+
+ &lt;&lt;heblink [[כריסטופר מולטיסנטי]]&gt;&gt;
+</pre>
+</div>
 <div created="20200220153427025" modified="20200220153617910" tags="[[The kitchen by Genevieve]] Kitchens" title="Cleaning properly">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
@@ -9652,8 +9662,7 @@ It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's
  &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
 </div>
 <div created="20200226063122808" modified="20200226063326805" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]]" title="Dalya`s room">
-<pre>
-[img[pictures/dalya.jpg]]
+<pre>[img[pictures/dalya.jpg]]
 
 
 
@@ -9782,8 +9791,7 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 </pre>
 </div>
 <div created="20200225190656305" modified="20200225190838834" tags="[[Here in the Ghetto]] Restaurants [[Coffee shops]] Kitchens" title="Delicatessen">
-<pre>
-[img[pictures/delicatessen-tel-aviv.jpg]]
+<pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
 
@@ -9798,16 +9806,14 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 </pre>
 </div>
 <div created="20200226101554988" modified="20200226101702896" tags="HH Music [[How many songs can you even invent at all]]" title="Disk store">
-<pre>
-[img[pictures/music-house.jpg]]
+<pre>[img[pictures/music-house.jpg]]
 
 
  &lt;&lt;heblink [[חנות דיסקים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200226102505843" modified="20200226102618987" tags="TV [[TV Series]] Mothers" title="Downton Abbey">
-<pre>
-[img[pictures/downton-abbey.jpg]]
+<pre>[img[pictures/downton-abbey.jpg]]
 
 
 
@@ -9975,7 +9981,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200226110912653" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200226112139802" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10087,7 +10093,6 @@ She loves us and take care of us all. In the end of every working day she moves 
 </div>
 <div created="20200226070954178" modified="20200226071112777" tags="[[Here in the Ghetto]]" title="Ghetto`s map">
 <pre>
-
 [img[pictures/ghettos-map.jpg]]
 
 
@@ -10108,16 +10113,14 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 </pre>
 </div>
 <div created="20200226072008566" modified="20200226072129972" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="Gili's kiosk">
-<pre>
-[img[pictures/gili.jpg]]
+<pre>[img[pictures/gili.jpg]]
 
 
 
  &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
 </div>
 <div created="20200225185730232" modified="20200225185911534" tags="[[Here in the Ghetto]] [[Coffee shops]] Coffee Baking" title="Graziani">
-<pre>
-[img[pictures/grasyani.jpg]]
+<pre>[img[pictures/grasyani.jpg]]
 
 
 
@@ -10208,8 +10211,7 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
 </pre>
 </div>
 <div created="20200225191512840" modified="20200225191856343" tags="[[Here in the Ghetto]] Houses" title="HaAarba`a 2">
-<pre>
-[img[pictures/haarbaa2.jpg]]
+<pre>[img[pictures/haarbaa2.jpg]]
 
 
 
@@ -10306,16 +10308,14 @@ Here in the picture are Hanna my mother and I, few months before she passed away
 </pre>
 </div>
 <div created="20200225165007413" modified="20200225165121233" tags="[[Outer sisters]]" title="Haruki Murakami">
-<pre>
-[img[pictures/haruki-murakami.jpg]]
+<pre>[img[pictures/haruki-murakami.jpg]]
 
 
 
  &lt;&lt;heblink [[הרוקי מורקמי]]&gt;&gt;</pre>
 </div>
 <div created="20200226064513284" modified="20200226064746447" tags="[[Here in the Ghetto]] [[A friend]] Metafiction" title="Hashmal Avi">
-<pre>
-[img[pictures/hashmal-avi.jpg]]
+<pre>[img[pictures/hashmal-avi.jpg]]
 
 
 
@@ -10353,8 +10353,7 @@ The only thing that I'm missing here [[in the ghetto|https://www.youtube.com/wat
 </pre>
 </div>
 <div created="20200226063715410" modified="20200226063849398" tags="[[Here in the Ghetto]] Kitchens" title="Hinnawi">
-<pre>
-[img[pictures/hinawi.jpg]]
+<pre>[img[pictures/hinawi.jpg]]
 
 
 
@@ -10695,8 +10694,7 @@ If you say [[John Goodman|https://www.imdb.com/name/nm0000422/]], even when I'm 
 </pre>
 </div>
 <div created="20200225183131810" modified="20200225183352679" tags="[[Coen sister]]" title="Jong">
-<pre>
-[img[pictures/jong.jpg]]
+<pre>[img[pictures/jong.jpg]]
 
 
 
@@ -10738,8 +10736,7 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
 </pre>
 </div>
 <div created="20200226065813953" modified="20200226065939356" tags="[[Here in the Ghetto]] [[A friend]] [[True stories]]" title="Kehol Haniree">
-<pre>
-[img[pictures/kechol-hanire.jpg]]
+<pre>[img[pictures/kechol-hanire.jpg]]
 
 
 
@@ -10766,8 +10763,7 @@ A good friend''
 </pre>
 </div>
 <div created="20200226103744594" modified="20200226103917687" tags="TV [[TV Series]]" title="Killing Eve">
-<pre>
-[img[pictures/killing-eve.jpg]]
+<pre>[img[pictures/killing-eve.jpg]]
 
 
 
@@ -10925,8 +10921,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <pre></pre>
 </div>
 <div created="20200226093936725" modified="20200226094207815" tags="[[Here in the Ghetto]] [[True stories]]" title="Lotus books">
-<pre>
-[img[pictures/lotus.jpg]]
+<pre>[img[pictures/lotus.jpg]]
 
 
 
@@ -10954,8 +10949,7 @@ For example, it seethes me when people use words purposelessly, like the word lo
 </pre>
 </div>
 <div created="20200226070258742" modified="20200226070425892" tags="[[Here in the Ghetto]] Restaurants Mothers" title="Manta Ray">
-<pre>
-[img[pictures/mantaray.jpg]]
+<pre>[img[pictures/mantaray.jpg]]
 
 
 
@@ -11042,6 +11036,19 @@ And tea is for the sicken ones.
 
 
  &lt;&lt;heblink [[הכתיבה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200226111902502" modified="20200226112209793" tags="[[The Sopranos]] TV [[TV Series]] Children" title="Meadow">
+<pre>
+[img[pictures/meadow-soprano.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[מדו]]&gt;&gt;
+
+
 </pre>
 </div>
 <div created="20200213154636920" modified="20200213161123485" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]]" title="Meals">
@@ -11139,8 +11146,7 @@ I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fel
 </pre>
 </div>
 <div created="20200225184220574" modified="20200225184537659" tags="[[Outer sisters]] Films [[Dreams that we've dreamt]] [[True stories]]" title="Mimi of Alfred">
-<pre>
-[img[pictures/mimi-shel-alfred.jpg]]
+<pre>[img[pictures/mimi-shel-alfred.jpg]]
 
 
 
@@ -11303,8 +11309,7 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
  &lt;&lt;heblink [[חשיפה לצפון]]&gt;&gt;</pre>
 </div>
 <div created="20200226094327852" modified="20200226094506605" tags="[[Here in the Ghetto]] Metafiction" title="Notbook">
-<pre>
-[img[pictures/notbook.jpg]]
+<pre>[img[pictures/notbook.jpg]]
 
 
 
@@ -11421,8 +11426,7 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
  &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
 </div>
 <div created="20200226103015146" modified="20200226103226043" tags="TV [[TV Series]]" title="Parenthood">
-<pre>
-[img[pictures/parenthood.jpg]]
+<pre>[img[pictures/parenthood.jpg]]
 
 
 
@@ -11440,8 +11444,7 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 </pre>
 </div>
 <div created="20200226071622540" modified="20200226071754636" tags="[[Here in the Ghetto]] Restaurants" title="Pasta Mia">
-<pre>
-[img[pictures/pasta-mia.jpg]]
+<pre>[img[pictures/pasta-mia.jpg]]
 
 
 
@@ -11573,8 +11576,7 @@ I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in 
 </pre>
 </div>
 <div created="20200226104510035" modified="20200226104625744" tags="[[A friend]] [[Monkeys with car keys]]" title="Priestly breastplate sisters">
-<pre>
-[img[pictures/achayot-la-choshen.jpg]]
+<pre>[img[pictures/achayot-la-choshen.jpg]]
 
 
 
@@ -11635,8 +11637,7 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 </pre>
 </div>
 <div created="20200225185018375" modified="20200225185129562" tags="[[Outer sisters]]" title="Queng">
-<pre>
-[img[pictures/queng.jpg]]
+<pre>[img[pictures/queng.jpg]]
 
 
 
@@ -11656,16 +11657,14 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
 <div created="20200225182339743" modified="20200225183940524" tags="[[Outer sisters]] [[Here in the Ghetto]] [[Coen sister]] Metafiction [[True stories]]" title="Rafi Műnz">
-<pre>
-[img[pictures/rafi-munz.jpg]]
+<pre>[img[pictures/rafi-munz.jpg]]
 
 
 
  &lt;&lt;heblink [[רפי מינץ]]&gt;&gt;</pre>
 </div>
 <div created="20200225182024426" modified="20200225182208299" tags="[[Outer sisters]] [[A friend]] [[How many songs can you even invent at all]]" title="Ran Yagil">
-<pre>
-[img[pictures/rani.jpg]]
+<pre>[img[pictures/rani.jpg]]
 
 
  &lt;&lt;heblink [[רן יגיל]]&gt;&gt;
@@ -11715,8 +11714,7 @@ From our [[rear window|https://www.imdb.com/title/tt0047396/]] you can mostly he
 </pre>
 </div>
 <div created="20200226091811039" modified="20200226092026164" tags="Houses" title="Renovating an selling furniture">
-<pre>
-[img[pictures/meshapzim-rahitim.jpg]] 
+<pre>[img[pictures/meshapzim-rahitim.jpg]] 
 
 
 
@@ -11869,8 +11867,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 </pre>
 </div>
 <div created="20200226103435046" modified="20200226103544709" tags="Mothers TV [[TV Series]]" title="Sex Education">
-<pre>
-[img[pictures/sex-education.jpg]]
+<pre>[img[pictures/sex-education.jpg]]
 
 
 
@@ -11878,8 +11875,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 </pre>
 </div>
 <div created="20200225182640202" modified="20200225182754249" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Shalom Hanoch">
-<pre>
-[img[pictures/shalom-chanoch.jpg]]
+<pre>[img[pictures/shalom-chanoch.jpg]]
 
 
  &lt;&lt;heblink [[שלום חנוך]]&gt;&gt;
@@ -11938,8 +11934,7 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
 </pre>
 </div>
 <div created="20200226104956723" modified="20200226105120112" tags="[[Monkeys with car keys]] [[True stories]] Metafiction" title="Smartphone">
-<pre>
-[img[pictures/smart-phone.jpg]]
+<pre>[img[pictures/smart-phone.jpg]]
 
 
 
@@ -11947,8 +11942,7 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
 </pre>
 </div>
 <div created="20200226110213394" modified="20200226110320166" tags="[[Monkeys with car keys]] [[On the road to somewhere]]" title="Social skills">
-<pre>
-[img[pictures/kishurim.jpg]]
+<pre>[img[pictures/kishurim.jpg]]
 
 
 
@@ -12085,8 +12079,7 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
 </pre>
 </div>
 <div created="20200226065424547" modified="20200226065603791" tags="Coffee [[Here in the Ghetto]] Restaurants" title="Tal Bagels">
-<pre>
-[img[pictures/tal-bagels.jpg]]
+<pre>[img[pictures/tal-bagels.jpg]]
 
 
 
@@ -12107,8 +12100,7 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
 </pre>
 </div>
 <div created="20200226092717325" modified="20200226092939415" tags="[[Here in the Ghetto]] Music Restaurants Kitchens" title="Teder/Romano">
-<pre>
-[img[pictures/teder-romano.jpg]]
+<pre>[img[pictures/teder-romano.jpg]]
 
 
 
@@ -12137,8 +12129,7 @@ When I was a student, I used to work as a security guard at the Editorial's yard
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
 <div created="20200226072300277" modified="20200226072654606" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="The baristas here">
-<pre>
-[img[pictures/barista.jpg]]
+<pre>[img[pictures/barista.jpg]]
 
 
 
@@ -12418,8 +12409,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 </pre>
 </div>
 <div created="20200226092322458" modified="20200226092617422" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="The relief is down the road">
-<pre>
-[img[pictures/hakala.jpg]]
+<pre>[img[pictures/hakala.jpg]]
 
 
 
@@ -12580,9 +12570,17 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 </pre>
 </div>
-<div created="20200226065025023" modified="20200226065231567" tags="[[Here in the Ghetto]] Restaurants Kitchens" title="Tony Vespa">
+<div created="20200226111310016" modified="20200226111422991" tags="TV [[The Sopranos]] [[TV Series]]" title="Tony Soprano">
 <pre>
-[img[pictures/tony-vespa.jpg]]
+[img[pictures/tony-soprano.jpg]]
+
+
+
+ &lt;&lt;heblink [[טוני סופרנו]]&gt;&gt;
+</pre>
+</div>
+<div created="20200226065025023" modified="20200226065231567" tags="[[Here in the Ghetto]] Restaurants Kitchens" title="Tony Vespa">
+<pre>[img[pictures/tony-vespa.jpg]]
 
 
 
@@ -12602,8 +12600,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
  &lt;&lt;heblink [[טורט]]&gt;&gt;</pre>
 </div>
 <div created="20200226110658194" modified="20200226110939417" tags="[[Monkeys with car keys]] [[The global village]] [[Iry claims]] [[On the road to somewhere]]" title="Tower of Babel">
-<pre>
-[img[pictures/migdal-bavel.jpg]]
+<pre>[img[pictures/migdal-bavel.jpg]]
 
 
 
@@ -12611,8 +12608,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
  &lt;&lt;heblink [[מגדל בבל]]&gt;&gt;</pre>
 </div>
 <div created="20200226102143639" modified="20200226102324537" tags="[[TV Series]] TV [[How many songs can you even invent at all]]" title="TREME">
-<pre>
-[img[pictures/treme.jpg]]
+<pre>[img[pictures/treme.jpg]]
 
 
 
@@ -12657,8 +12653,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 </pre>
 </div>
 <div created="20200226064334395" modified="20200226064504279" tags="[[Here in the Ghetto]] Music [[True stories]]" title="Urban Nature">
-<pre>
-[img[pictures/zirey-kaitz.jpg]]
+<pre>[img[pictures/zirey-kaitz.jpg]]
 
 
 
@@ -12713,8 +12708,7 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
 </pre>
 </div>
 <div created="20200226091329887" modified="20200226091546946" tags="Mothers Children [[Coen sister]] [[The team]] [[Single parent children]]" title="We were born">
-<pre>
-[img[pictures/noladnu.jpg]]
+<pre>[img[pictures/noladnu.jpg]]
 
 
 
@@ -12756,8 +12750,7 @@ And the mushrooms? Aren't they in pain?
  &lt;&lt;heblink [[למה הדבר דומה]]&gt;&gt;</pre>
 </div>
 <div created="20200226093148898" modified="20200226093501383" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Houses [[True stories]]" title="What have you done for peace today">
-<pre>
-[img[pictures/ma-asita-hayom.jpg]]
+<pre>[img[pictures/ma-asita-hayom.jpg]]
 
 
  &lt;&lt;heblink [[מה עשית היום למען השלום]]&gt;&gt;
@@ -12866,8 +12859,7 @@ In [[my name|Wyclef Jean]] and in [[Wyclef Jean's name|https://www.youtube.com/w
 </pre>
 </div>
 <div created="20200226070625435" modified="20200226070736675" tags="[[Here in the Ghetto]] Mothers" title="Women`s protest">
-<pre>
-[img[pictures/mechaat-hanashim.jpg]]
+<pre>[img[pictures/mechaat-hanashim.jpg]]
 
 
  &lt;&lt;heblink [[מחאת הנשים]]&gt;&gt;
@@ -12889,8 +12881,7 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
 </pre>
 </div>
 <div created="20200225183706640" modified="20200225183805172" tags="[[Coen sister]]" title="Ya">
-<pre>
-[img[pictures/ya.jpg]]
+<pre>[img[pictures/ya.jpg]]
 
 
  &lt;&lt;heblink [[יה]]&gt;&gt;</pre>
