--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קופים ממונעים]] [[מגדל בבל]]" title="$:/StoryList">
+<div list="טלוויזיה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200226102127793" title="$:/temp/search">
+<div created="20161023184814872" modified="20200226111134448" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9624,7 +9624,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200226110736876" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200226112248975" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13430,7 +13430,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170922153729733" modified="20190722113207959" tags="הסופרנוס טלוויזיה" title="טוני סופרנו">
+<div created="20170922153729733" modified="20200226111525234" tags="הסופרנוס טלוויזיה סדרות" title="טוני סופרנו">
 <pre>[img[pictures/tony-soprano.jpg]]
 
 !!![[אנג'ליק]]:
@@ -13439,7 +13439,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לקראת סוף הסדרה, (כן, סיימנו אמש), טוני נוסע ללאס וגאס, ופוגש שם בחורה שהייתה של [[כריס|כריסטופר מולטיסנטי]], שכבר מת. הוא לוקח איתה [[פיוטה|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%95%D7%98%D7%94]]. הוא עובר חוויה שמשפיעה עליו - ואף חוזר [[מהורהר|https://www.youtube.com/watch?v=1re5cGlP-Xg]].
 
-[[הסוף נשאר פתוח]]</pre>
+[[הסוף נשאר פתוח]]
+
+
+
+&lt;&lt;englink [[Tony Soprano]]&gt;&gt;</pre>
 </div>
 <div created="20170407152300115" modified="20180605133128440" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
 <pre>[img[pictures/tost.jpg]]
@@ -14508,12 +14512,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Cauliflower in a frying Pan]]&gt;&gt;</pre>
 </div>
-<div created="20170923082157875" modified="20190310195523585" tags="הסופרנוס טלוויזיה" title="כריסטופר מולטיסנטי">
+<div created="20170923082157875" modified="20200226111829866" tags="הסופרנוס טלוויזיה" title="כריסטופר מולטיסנטי">
 <pre>[img[pictures/christopher-moltisanti.jpg]]
 
 !!![[יויו]]:
 
 כשבסוף הסידרה גורמים לנו לחשוב שנשמתו של [[כריס|http://www.imdb.com/name/nm0408284/?ref_=fn_nm_nm_1]] נכנסה לתוך [[חתול|https://www.youtube.com/watch?v=xfi5I02r6xE]], אני מבין, שקיבלתי אישור קוסמי לחיבתי העזה אליו, גם ברגעים בהם הוא אידיוט גמור ודפוק על כל הראש.
+
+
+
+
+&lt;&lt;englink [[Christopher Moltisanti]]&gt;&gt;
 
 </pre>
 </div>
@@ -15307,12 +15316,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Tower of Babel]]&gt;&gt;
 </pre>
 </div>
-<div created="20170926191733045" modified="20190310195628570" tags="הסופרנוס ילדים טלוויזיה" title="מדו">
+<div created="20170926191733045" modified="20200226112317168" tags="הסופרנוס ילדים טלוויזיה סדרות" title="מדו">
 <pre>[img[pictures/meadow-soprano.jpg]]
 
 !!![[אנג'ליק]]:
 
-[[מדו סופרנו|http://www.imdb.com/name/nm0797464/]] המתוקה, היפה, הילדה הטובה, הרגישה, האיכפתית. חתכו את הסידרה בזמן, אחרת, מסכנה, הייתה צריכה להתמודד עם [[שאלות קשות|https://www.youtube.com/watch?v=cCDLz2Wabgg]].</pre>
+[[מדו סופרנו|http://www.imdb.com/name/nm0797464/]] המתוקה, היפה, הילדה הטובה, הרגישה, האיכפתית. חתכו את הסידרה בזמן, אחרת, מסכנה, הייתה צריכה להתמודד עם [[שאלות קשות|https://www.youtube.com/watch?v=cCDLz2Wabgg]].
+
+
+
+
+&lt;&lt;englink [[Meadow]]&gt;&gt;</pre>
 </div>
 <div created="20200127105036204" modified="20200226093526373" tags="[[כאן בגטו]] בתים [[סיפורים אמיתיים]] [[מטא בדיון]] [[בדרך לאן שהוא]]" title="מה עשית היום למען השלום">
 <pre>[img[pictures/ma-asita-hayom.jpg]]
