--- a/index.html
+++ b/index.html
@@ -389,6 +389,8 @@ Error message and password prompt
 
 <li>אני רוצה להתנצל</li>
 
+<li>אסף אמדורסקי</li>
+
 <li>אספרגוס</li>
 
 <li>אפייה</li>
@@ -9184,7 +9186,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="טלוויזיה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9206,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200226111134448" title="$:/temp/search">
+<div created="20161023184814872" modified="20200226112935309" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9624,7 +9626,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200226112248975" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200226162832046" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10539,6 +10541,30 @@ well,
 
 
 &lt;&lt;englink [[I would like to apologize]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200226162322265" modified="20200226162858339" tags="מוזיקה [[אחיות חוץ]] [[כאן בגטו]]" title="אסף אמדורסקי">
+<pre>
+[img[pictures/Assaf-Amdursky.jpg]]
+
+
+
+!!![[יויו]]:
+
+
+
+
+
+
+
+&lt;&lt;englink [[Assaf Amdursky]]&gt;&gt;
+
+
+
+
+
+
 
 </pre>
 </div>
