--- a/english.html
+++ b/english.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>Arnon Chen</li>
 
+<li>Assaf Amdursky</li>
+
 <li>Assuming and Preserving</li>
 
 <li>Aunt Jemima</li>
@@ -9170,6 +9172,17 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
 
 </pre>
 </div>
+<div created="20200226163928003" modified="20200226164056121" tags="Music [[Outer sisters]] [[Here in the Ghetto]]" title="Assaf Amdursky">
+<pre>
+[img[pictures/Assaf-Amdursky.jpg]]
+
+
+
+ &lt;&lt;heblink [[אסף אמדורסקי]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200215095540063" modified="20200215095741084" tags="[[In the Animal Farm]]" title="Assuming and Preserving">
 <pre>[img[pictures/nekiyey-capaim.jpg]]
 
@@ -9981,7 +9994,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200226162608616" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200226164023353" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
