--- a/index.html
+++ b/index.html
@@ -389,6 +389,8 @@ Error message and password prompt
 
 <li>אני רוצה להתנצל</li>
 
+<li>אסף אמדורסקי</li>
+
 <li>אספרגוס</li>
 
 <li>אפייה</li>
@@ -9184,7 +9186,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אסף אמדורסקי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9624,7 +9626,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200226162832046" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200226164110627" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10540,6 +10542,18 @@ well,
 
 &lt;&lt;englink [[I would like to apologize]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200226163607017" modified="20200226164136581" tags="מוזיקה [[כאן בגטו]] [[אחיות חוץ]]" title="אסף אמדורסקי">
+<pre>
+[img[pictures/Assaf-Amdursky.jpg]]
+
+
+!!![[יווי]]:
+
+
+
+&lt;&lt;englink [[Assaf Amdursky]]&gt;&gt;
 </pre>
 </div>
 <div created="20170407125610504" modified="20180605132930456" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="אספרגוס">
