--- a/index.html
+++ b/index.html
@@ -10544,12 +10544,15 @@ well,
 
 </pre>
 </div>
-<div created="20200226163607017" modified="20200226164136581" tags="מוזיקה [[כאן בגטו]] [[אחיות חוץ]]" title="אסף אמדורסקי">
+<div created="20200226163607017" modified="20200226165423212" tags="מוזיקה [[כאן בגטו]] [[אחיות חוץ]]" title="אסף אמדורסקי">
 <pre>
 [img[pictures/Assaf-Amdursky.jpg]]
 
 
 !!![[יווי]]:
+
+
+אסף אמדורסקי כתב ועשה דברים יפים עוד לפני ום אחרי מנועים שקטים, אבל מנועים שקטים הוא אחד מהאלבומים של החיים שלי, שאיתו התרסקתי עד שהגעתי למעבדה. את התקפת לב לא העזתי לשמוע עד לא מזמן - כשהשיא היה ללכת עם תומר להופעה לכבוד   עשרים שנה לאלבום הנפלא הזה.
 
 
 
