--- a/index.html
+++ b/index.html
@@ -10544,7 +10544,7 @@ well,
 
 </pre>
 </div>
-<div created="20200226163607017" modified="20200226170053768" tags="מוזיקה [[כאן בגטו]] [[אחיות חוץ]]" title="אסף אמדורסקי">
+<div created="20200226163607017" modified="20200226170638184" tags="מוזיקה [[כאן בגטו]] [[אחיות חוץ]]" title="אסף אמדורסקי">
 <pre>
 [img[pictures/Assaf-Amdursky.jpg]]
 
@@ -10552,7 +10552,7 @@ well,
 !!![[יויו]]:
 
 
-[[אסף אמדורסקי|https://he.wikipedia.org/wiki/%D7%90%D7%A1%D7%A3_%D7%90%D7%9E%D7%93%D7%95%D7%A8%D7%A1%D7%A7%D7%99]] כתב ועשה דברים יפים עוד לפני וגם [[אחרי|https://www.youtube.com/watch?v=Rjr2gUvhdI0]] [[מנועים שקטים|https://he.wikipedia.org/wiki/%D7%9E%D7%A0%D7%95%D7%A2%D7%99%D7%9D_%D7%A9%D7%A7%D7%98%D7%99%D7%9D]], אבל מנועים שקטים הוא אחד מהאלבומים של החיים שלי, שאיתו התרסקתי עד שהגעתי [[למעבדה|המעבדה]]. את [[התקפת לב|https://www.youtube.com/watch?v=YS1C6lJImOc]] לא העזתי לשמוע עד לא מזמן - כשהשיא היה ללכת עם [[תומר]] להופעה לכבוד   עשרים שנה לאלבום הנפלא הזה.
+[[אסף אמדורסקי|https://he.wikipedia.org/wiki/%D7%90%D7%A1%D7%A3_%D7%90%D7%9E%D7%93%D7%95%D7%A8%D7%A1%D7%A7%D7%99]] כתב ועשה דברים יפים ומעניינים עוד [[לפני|https://www.youtube.com/watch?v=mB9Ixdv049k]] וגם [[אחרי|https://www.youtube.com/watch?v=Rjr2gUvhdI0]] [[מנועים שקטים|https://he.wikipedia.org/wiki/%D7%9E%D7%A0%D7%95%D7%A2%D7%99%D7%9D_%D7%A9%D7%A7%D7%98%D7%99%D7%9D]], אבל מנועים שקטים הוא אחד מהאלבומים של החיים שלי, שאיתו התרסקתי עד שהגעתי [[למעבדה|המעבדה]]. את [[התקפת לב|https://www.youtube.com/watch?v=YS1C6lJImOc]] לא העזתי לשמוע עד לא מזמן - כשהשיא היה ללכת עם [[תומר]] להופעה לכבוד   עשרים שנה לאלבום הנפלא הזה.
 
 
 
