--- a/index.html
+++ b/index.html
@@ -9177,7 +9177,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200220174001870" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200226165858547" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200226171359702" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -10544,7 +10544,7 @@ well,
 
 </pre>
 </div>
-<div created="20200226163607017" modified="20200226170638184" tags="מוזיקה [[כאן בגטו]] [[אחיות חוץ]]" title="אסף אמדורסקי">
+<div created="20200226163607017" modified="20200226211818492" tags="מוזיקה [[כאן בגטו]] [[אחיות חוץ]]" title="אסף אמדורסקי">
 <pre>
 [img[pictures/Assaf-Amdursky.jpg]]
 
@@ -10552,7 +10552,9 @@ well,
 !!![[יויו]]:
 
 
-[[אסף אמדורסקי|https://he.wikipedia.org/wiki/%D7%90%D7%A1%D7%A3_%D7%90%D7%9E%D7%93%D7%95%D7%A8%D7%A1%D7%A7%D7%99]] כתב ועשה דברים יפים ומעניינים עוד [[לפני|https://www.youtube.com/watch?v=mB9Ixdv049k]] וגם [[אחרי|https://www.youtube.com/watch?v=Rjr2gUvhdI0]] [[מנועים שקטים|https://he.wikipedia.org/wiki/%D7%9E%D7%A0%D7%95%D7%A2%D7%99%D7%9D_%D7%A9%D7%A7%D7%98%D7%99%D7%9D]], אבל מנועים שקטים הוא אחד מהאלבומים של החיים שלי, שאיתו התרסקתי עד שהגעתי [[למעבדה|המעבדה]]. את [[התקפת לב|https://www.youtube.com/watch?v=YS1C6lJImOc]] לא העזתי לשמוע עד לא מזמן - כשהשיא היה ללכת עם [[תומר]] להופעה לכבוד   עשרים שנה לאלבום הנפלא הזה.
+[[אסף אמדורסקי|https://he.wikipedia.org/wiki/%D7%90%D7%A1%D7%A3_%D7%90%D7%9E%D7%93%D7%95%D7%A8%D7%A1%D7%A7%D7%99]] כתב ועשה דברים יפים ומעניינים  [[לפני|https://www.youtube.com/watch?v=KQBQBAdsR3o]] וגם [[אחרי|https://www.youtube.com/watch?v=Rjr2gUvhdI0]] מנועים שקטים אבל [[מנועים שקטים|https://he.wikipedia.org/wiki/%D7%9E%D7%A0%D7%95%D7%A2%D7%99%D7%9D_%D7%A9%D7%A7%D7%98%D7%99%D7%9D]], הוא אחד מהאלבומים של החיים שלי, שאיתו התרסקתי עד שהגעתי [[למעבדה|המעבדה]], אחר כך יצא האלבום לייב עם גרסה [[למעיין|https://www.youtube.com/watch?v=dH4hfVXD2Jw]] הנהדר. 
+
+את [[התקפת לב|https://www.youtube.com/watch?v=YS1C6lJImOc]] לא העזתי לשמוע עד לא מזמן - כשהשיא היה ללכת עם [[תומר]] לא מזמן להופעה לכבוד עשרים שנה לאלבום הנפלא הזה.
 
 
 
