--- a/english.html
+++ b/english.html
@@ -589,6 +589,8 @@ Error message and password prompt
 
 <li>Menopause sisters</li>
 
+<li>Mental generation</li>
+
 <li>Metafiction</li>
 
 <li>Michel Gondry</li>
@@ -8760,7 +8762,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Mental generation]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9173,8 +9175,7 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
 </pre>
 </div>
 <div created="20200226163928003" modified="20200226164056121" tags="Music [[Outer sisters]] [[Here in the Ghetto]]" title="Assaf Amdursky">
-<pre>
-[img[pictures/Assaf-Amdursky.jpg]]
+<pre>[img[pictures/Assaf-Amdursky.jpg]]
 
 
 
@@ -9581,8 +9582,7 @@ coming soon as possible
 </pre>
 </div>
 <div created="20200226111628712" modified="20200226111733644" tags="[[The Sopranos]] TV [[TV Series]]" title="Christopher Moltisanti">
-<pre>
-[img[pictures/christopher-moltisanti.jpg]]
+<pre>[img[pictures/christopher-moltisanti.jpg]]
 
 
 
@@ -9994,7 +9994,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200226164023353" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200303102719553" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10105,8 +10105,7 @@ She loves us and take care of us all. In the end of every working day she moves 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
 <div created="20200226070954178" modified="20200226071112777" tags="[[Here in the Ghetto]]" title="Ghetto`s map">
-<pre>
-[img[pictures/ghettos-map.jpg]]
+<pre>[img[pictures/ghettos-map.jpg]]
 
 
  &lt;&lt;heblink [[מפת הגטו]]&gt;&gt;</pre>
@@ -11052,8 +11051,7 @@ And tea is for the sicken ones.
 </pre>
 </div>
 <div created="20200226111902502" modified="20200226112209793" tags="[[The Sopranos]] TV [[TV Series]] Children" title="Meadow">
-<pre>
-[img[pictures/meadow-soprano.jpg]]
+<pre>[img[pictures/meadow-soprano.jpg]]
 
 
 
@@ -11109,6 +11107,18 @@ meaning
 
  &lt;&lt;heblink [[האחיות בלות]]&gt;&gt;
 </pre>
+</div>
+<div created="20200303102617862" modified="20200303102758368" tags="[[Monkeys with car keys]]" title="Mental generation">
+<pre>
+
+[img[pictures/mental-generation.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[דור הנפש]]&gt;&gt;</pre>
 </div>
 <div created="20200212160436198" modified="20200217121902315" tags="[[True stories]] Films [[The global village]]" title="Metafiction">
 <pre>[img[pictures/meta-fiction.jpg]]
@@ -12584,8 +12594,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 </pre>
 </div>
 <div created="20200226111310016" modified="20200226111422991" tags="TV [[The Sopranos]] [[TV Series]]" title="Tony Soprano">
-<pre>
-[img[pictures/tony-soprano.jpg]]
+<pre>[img[pictures/tony-soprano.jpg]]
 
 
 
