--- a/index.html
+++ b/index.html
@@ -523,6 +523,8 @@ Error message and password prompt
 
 <li>דה וינצ'י 2</li>
 
+<li>דור הנפש</li>
+
 <li>דיוויד בואי</li>
 
 <li>דיוויד ביירן</li>
@@ -9186,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אסף אמדורסקי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דור הנפש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9206,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200226112935309" title="$:/temp/search">
+<div created="20161023184814872" modified="20200302135403626" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9626,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200226164110627" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200303102829824" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10545,8 +10547,7 @@ well,
 </pre>
 </div>
 <div created="20200226163607017" modified="20200226211818492" tags="מוזיקה [[כאן בגטו]] [[אחיות חוץ]]" title="אסף אמדורסקי">
-<pre>
-[img[pictures/Assaf-Amdursky.jpg]]
+<pre>[img[pictures/Assaf-Amdursky.jpg]]
 
 
 !!![[יויו]]:
@@ -11929,6 +11930,19 @@ Is where I want to be
 זה לא כל כך נעים לראות רדיו סגור, אבל כשאתה מתגורר כאן בגטו  לפעמים דה וינצ'י 2 זה בדרך, ואני רגשן [[מתגעגע|https://www.youtube.com/watch?v=SPg4IwGZMvM]].
 
 &lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
+</div>
+<div created="20200303102502696" modified="20200303102856758" tags="[[קופים ממונעים]]" title="דור הנפש">
+<pre>
+[img[pictures/mental-generation.jpg]]
+
+
+
+
+
+&lt;&lt;englink [[Mental generation]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20170105154405192" modified="20200215220502704" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
